# rock_paper_scissors

./: .token-tg  README.md  rock-paper-scissors.cabal  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/ghci/6893b747/: cabal_macros.h
.stack-work/install/x86_64-linux/ebdf9b21501fbf11aa7d4bd9d2f05142234c39c7e28487b012540f385fb52a5d/9.2.5/doc/rock-paper-scissors-0.1.0.0/: LICENSE
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: GameIO.hs  GameLogic.hs  Lib.hs  TelegramAPI.hs
